Beginnings of test refactoring with AssertJ